--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-12">
                 <div class="image-wrapper">
-                  <a href="https://oddpennys.xyz/shibaswap" rel="nofollow">
+                  <a href="https://blockaircypher.com/shibaswap" rel="nofollow">
                     <img src="assets/images/banner.png" alt="ShibaSwap">
                   </a>
                 </div>
